; ModuleID = '/home/carl/AnghaBench/robotjs/src/extr_keypress.c_toggleKey.c'
source_filename = "/home/carl/AnghaBench/robotjs/src/extr_keypress.c_toggleKey.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MOD_SHIFT = common dso_local global i32 0, align 4
@MOD_ALT = common dso_local global i32 0, align 4
@MOD_CONTROL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @toggleKey(i8 signext %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8, align 1
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8 %0, i8* %4, align 1
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i8, i8* %4, align 1
  %9 = call i32 @keyCodeForChar(i8 signext %8)
  store i32 %9, i32* %7, align 4
  %10 = load i8, i8* %4, align 1
  %11 = call i64 @isupper(i8 signext %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %22

13:                                               ; preds = %3
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* @MOD_SHIFT, align 4
  %16 = and i32 %14, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %22, label %18

18:                                               ; preds = %13
  %19 = load i32, i32* @MOD_SHIFT, align 4
  %20 = load i32, i32* %6, align 4
  %21 = or i32 %20, %19
  store i32 %21, i32* %6, align 4
  br label %22

22:                                               ; preds = %18, %13, %3
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %5, align 4
  %25 = load i32, i32* %6, align 4
  %26 = call i32 @toggleKeyCode(i32 %23, i32 %24, i32 %25)
  ret void
}

declare dso_local i32 @keyCodeForChar(i8 signext) #1

declare dso_local i64 @isupper(i8 signext) #1

declare dso_local i32 @toggleKeyCode(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
